--- a/conf/app.conf
+++ b/conf/app.conf
@@ -6,3 +6,4 @@ copyrequestbody = true
 EnableDocs = true
 sessionon = true
 svg_path = /root/gocode/src/panda/svgfile/
+pic_path = /root/gocode/src/panda/picfile/
