--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,5 +1,5 @@
 appname = panda
-httpport = 8080
+httpport = 80
 runmode = dev
 autorender = false
 copyrequestbody = true
@@ -7,3 +7,4 @@ EnableDocs = true
 sessionon = true
 svg_path = /root/gocode/src/panda/svgfile/
 pic_path = /root/gocode/src/panda/picfile/
+chain_rpc = http://localhost:20336
